azure-kubernetes-service/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nkod
  labels:
    app.kubernetes.io/name: nkod
