azure-kubernetes-service/base/adapter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nkd-adapter-deployment
  namespace: nkd
  labels:
    app.kubernetes.io/name: adapter
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: adapter
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: adapter
    spec:
      volumes:
        - name: adapter-volume
          persistentVolumeClaim:
            claimName: nkd-adapter-pvc
      securityContext:
          fsGroup: 5987
          fsGroupChangePolicy: "OnRootMismatch"
      containers:
        - name: nkd-adapter
          image: ghcr.io/datagov-cz/nkd-adapter
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: "/data/"
              name: adapter-volume
        - name: nkd-registration-manager
          image: ghcr.io/datagov-cz/nkd-registration-manager
          imagePullPolicy: Always
          ports:
            - containerPort: 5100
          volumeMounts:
            - mountPath: "/data"
              name: adapter-volume
---
apiVersion: v1
kind: Service
metadata:
  name: nkd-registration-manager
  namespace: nkd
  labels:
    app.kubernetes.io/name: registration-manager
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: adapter
  ports:
  - protocol: TCP
    targetPort: 5100
    port: 5100
