azure-kubernetes-service/base/caais-middleware.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nkd-caais-middleware-deployment
  namespace: nkd
  labels:
    app.kubernetes.io/name: caais-middleware
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: caais-middleware
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: caais-middleware
    spec:
      containers:
        - name: nkd-caais-middleware
          image: ghcr.io/datagov-cz/caais-middleware
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: caais-certificate-volume
              mountPath: /opt/certificates/
              readOnly: true
      volumes:
        - name: caais-certificate-volume
          secret:
            secretName: nkd-caais-middleware-certificate
---
apiVersion: v1
kind: Service
metadata:
  name: nkd-caais-middleware
  namespace: nkd
  labels:
    app.kubernetes.io/name: caais-middleware
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: caais-middleware
  ports:
  - protocol: TCP
    targetPort: 5000
    port: 5000
