azure-kubernetes-service/base/catalog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nkd-catalog-deployment
  namespace: nkd
  labels:
    app.kubernetes.io/name: catalog
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: catalog
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: catalog
    spec:
      containers:
        - name: nkd-catalog
          image: ghcr.io/datagov-cz/nkd-catalog
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nkd-catalog
  namespace: nkd
  labels:
    app.kubernetes.io/name: catalog
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: catalog
  ports:
  - protocol: TCP
    targetPort: 80
    port: 80
