azure-kubernetes-service/base/couchdb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nkd-couchdb-deployment
  namespace: nkd
  labels:
    app.kubernetes.io/name: couchdb
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: couchdb
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: couchdb
    spec:
      volumes:
        - name: couchdb-volume
          persistentVolumeClaim:
            claimName: nkd-couchdb-pvc
      securityContext:
          fsGroup: 5984
          fsGroupChangePolicy: "OnRootMismatch"
      containers:
        - name: nkd-couchdb
          image: ghcr.io/datagov-cz/nkd-couchdb
          imagePullPolicy: Always
          ports:
            - containerPort: 5984
          volumeMounts:
            - mountPath: "/opt/couchdb/data"
              name: couchdb-volume
          securityContext:
            runAsUser: 5984
            runAsGroup: 5984
            runAsNonRoot: true
            allowPrivilegeEscalation: false
  strategy:
    type: Recreate
---
apiVersion: v1
kind: Service
metadata:
  name: nkd-couchdb
  namespace: nkd
  labels:
    app.kubernetes.io/name: couchdb
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: couchdb
  ports:
  - protocol: TCP
    targetPort: 5984
    port: 5984
