azure-kubernetes-service/base/design-system.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nkd-design-system-deployment
  namespace: nkd
  labels:
    app.kubernetes.io/name: design-system
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: design-system
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: design-system
    spec:
      containers:
        - name: nkd-design-system
          image: ghcr.io/datagov-cz/gov-design-system:2025-07-01
          imagePullPolicy: Always
        - name: nkd-design-system-v47
          image: ghcr.io/datagov-cz/gov-design-system@sha256:a81ddfbf05af93c520a008a195f8854b70fae11f39820f2a3feab9ec6aae2ffa
          digest:
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: nkd-design-system
  namespace: nkd
  labels:
    app.kubernetes.io/name: design-system
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: design-system
  ports:
  - protocol: TCP
    name: v2025-07-01
    targetPort: 80
    port: 80
  - protocol: TCP
    name: v47
    targetPort: 81
    port: 81
