azure-kubernetes-service/base/forms.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nkd-forms-deployment
  namespace: nkd
  labels:
    app.kubernetes.io/name: forms
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: forms
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: forms
    spec:
      containers:
        - name: nkd-forms
          image: ghcr.io/datagov-cz/nkd-forms:main
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nkd-forms
  namespace: nkd
  labels:
    app.kubernetes.io/name: forms
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: forms
  ports:
  - protocol: TCP
    targetPort: 80
    port: 80
