azure-kubernetes-service/base/gateway-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: nkd-gateway
  namespace: nkd
  labels:
    app.kubernetes.io/name: gateway
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-resource-group:
    service.beta.kubernetes.io/azure-load-balancer-ipv4:
    service.beta.kubernetes.io/azure-load-balancer-ipv6:
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: gateway
  externalTrafficPolicy: Cluster
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
  - IPv4
  - IPv6
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: 443
