azure-kubernetes-service/base/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nkd-gateway-deployment
  namespace: nkd
  labels:
    app.kubernetes.io/name: gateway
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: gateway
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gateway
    spec:
      containers:
        - name: nkd-gateway
          image: ghcr.io/datagov-cz/nkd-gateway
          imagePullPolicy: Always
          ports:
            - containerPort: 443
            - containerPort: 8080
          volumeMounts:
            - name: ofn-tls-volume
              mountPath: /opt/ssl/ofn
              readOnly: true
            - name: data-tls-volume
              mountPath: /opt/ssl/data
              readOnly: true
          resources:
            requests:
              memory: "256Mi"
            limits:
              memory: "256Mi"
      volumes:
        - name: ofn-tls-volume
          secret:
            secretName: nkd-ofn-tls
        - name: data-tls-volume
          secret:
            secretName: nkd-data-tls
---
# Internal service for monitoring.
apiVersion: v1
kind: Service
metadata:
  name: nkd-gateway-status
  namespace: nkd
  labels:
    app.kubernetes.io/name: gateway
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: gateway
  ports:
  - protocol: TCP
    targetPort: 8080
    port: 8080
