azure-kubernetes-service/base/graphql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nkd-graphql-deployment
  namespace: nkd
  labels:
    app.kubernetes.io/name: graphql
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: graphql
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: graphql
    spec:
      volumes:
        - name: graphql-volume
          persistentVolumeClaim:
            claimName: nkd-graphql-pvc
      securityContext:
          fsGroup: 1000
          fsGroupChangePolicy: "OnRootMismatch"
      containers:
        - name: nkd-graphql
          image: ghcr.io/datagov-cz/nkd-graphql:main
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: "/database"
              name: graphql-volume
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
            allowPrivilegeEscalation: false
        - name: ssh-server
          image: ghcr.io/datagov-cz/nkd-ssh-server:main
          imagePullPolicy: Always
          ports:
            - containerPort: 22
          volumeMounts:
            - mountPath: "/database"
              name: graphql-volume
  strategy:
    type: Recreate
---
apiVersion: v1
kind: Service
metadata:
  name: nkd-graphql
  namespace: nkd
  labels:
    app.kubernetes.io/name: graphql
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: graphql
  ports:
  - protocol: TCP
    targetPort: 8080
    port: 8080
    name: http
  - protocol: TCP
    targetPort: 22
    port: 22
    name: ssh
