azure-kubernetes-service/base/ldf.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nkd-ldf-deployment
  namespace: nkd
  labels:
    app.kubernetes.io/name: ldf
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: ldf
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ldf
    spec:
      volumes:
        - name: ldf-volume
          persistentVolumeClaim:
            claimName: nkd-ldf-pvc
      securityContext:
          fsGroup: 1000
          fsGroupChangePolicy: "OnRootMismatch"
      containers:
        - name: nkd-ldf
          image: ghcr.io/datagov-cz/nkd-ldf:main
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
            - containerPort: 5000
          volumeMounts:
            - mountPath: "/data"
              name: ldf-volume
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
            allowPrivilegeEscalation: false
        - name: ssh-server
          image: ghcr.io/datagov-cz/nkd-ssh-server:main
          imagePullPolicy: Always
          ports:
            - containerPort: 22
          volumeMounts:
            - mountPath: "/data"
              name: ldf-volume
  strategy:
    type: Recreate
---
apiVersion: v1
kind: Service
metadata:
  name: nkd-ldf
  namespace: nkd
  labels:
    app.kubernetes.io/name: ldf
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ldf
  ports:
  - protocol: TCP
    targetPort: 3000
    port: 3000
    name: http-ldf
  - protocol: TCP
    targetPort: 5000
    port: 5000
    name: http-control
  - protocol: TCP
    targetPort: 22
    port: 22
    name: ssh
