azure-kubernetes-service/base/linkedpipes-etl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nkd-linkedpipes-etl-deployment
  namespace: nkd
  labels:
    app.kubernetes.io/name: linkedpipes-etl
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: linkedpipes-etl
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: linkedpipes-etl
    spec:
      volumes:
        - name: linkedpipes-etl-volume
          persistentVolumeClaim:
            claimName: nkd-linkedpipes-etl-pvc
        - name: public-volume
          persistentVolumeClaim:
            claimName: nkd-public-pvc
        - name: adapter-volume
          persistentVolumeClaim:
            claimName: nkd-adapter-pvc
        - name: linkedpipes-etl-configuration
          configMap:
            name: nkd-linkedpipes-etl
            items:
              - key: lp-etl-configuration.ttl
                path: lp-etl-configuration.ttl
        - name: linkedpipes-etl-crontab
          configMap:
            name: nkd-linkedpipes-etl
            items:
              - key: lp-etl-crontab
                path: lp-etl-crontab
      securityContext:
          fsGroup: 5987
          fsGroupChangePolicy: "OnRootMismatch"
      containers:
        - name: nkd-linkedpipes-etl-storage
          image: ghcr.io/datagov-cz/etl-storage:develop
          imagePullPolicy: Always
          ports:
            - containerPort: 8083
          volumeMounts:
            - mountPath: "/data/lp-etl/"
              name: linkedpipes-etl-volume
          securityContext:
            runAsUser: 5987
            runAsGroup: 5987
            runAsNonRoot: true
        - name: nkd-linkedpipes-etl-frontend
          image: ghcr.io/datagov-cz/etl-frontend:develop
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          securityContext:
            runAsUser: 5987
            runAsGroup: 5987
            runAsNonRoot: true
        - name: nkd-linkedpipes-etl-executor
          image: ghcr.io/datagov-cz/etl-executor:develop
          imagePullPolicy: Always
          ports:
            - containerPort: 8085
          volumeMounts:
            - mountPath: "/data/lp-etl/"
              name: linkedpipes-etl-volume
            - mountPath: "/data/adapter/"
              name: adapter-volume
            - mountPath: "/data/public/"
              name: public-volume
            - mountPath: "/opt/nkd/"
              name: linkedpipes-etl-configuration
          securityContext:
            runAsUser: 5987
            runAsGroup: 5987
            runAsNonRoot: true
        - name: nkd-linkedpipes-etl-executor-monitor
          image: ghcr.io/datagov-cz/etl-executor-monitor:develop
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
          volumeMounts:
            - mountPath: "/data/lp-etl/"
              name: linkedpipes-etl-volume
          securityContext:
            runAsUser: 5987
            runAsGroup: 5987
            runAsNonRoot: true
        - name: nkd-orchestrator
          image: ghcr.io/datagov-cz/nkd-orchestrator:develop
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: "/data/lp-etl/"
              name: linkedpipes-etl-volume
            - mountPath: "/data/public/"
              name: public-volume
            - mountPath: "/etc/cron.d/"
              name: linkedpipes-etl-crontab
  strategy:
    type: Recreate
---
apiVersion: v1
kind: Service
metadata:
  name: nkd-linkedpipes-etl
  namespace: nkd
  labels:
    app.kubernetes.io/name: linkedpipes-etl
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: linkedpipes-etl
  ports:
  - protocol: TCP
    targetPort: 8080
    port: 8080
