azure-kubernetes-service/base/portal-data.gov.cz.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nkd-portal-data-gov-cz-deployment
  namespace: nkd
  labels:
    app.kubernetes.io/name: portal-data-gov-cz
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: portal-data-gov-cz
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: portal-data-gov-cz
    spec:
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: nkd-portal-data-gov-cz-pvc
      securityContext:
          fsGroup: 33
          fsGroupChangePolicy: "OnRootMismatch"
      containers:
        - name: nkd-portal-data-gov-cz
          image: ghcr.io/datagov-cz/nkd-jekyll:main
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: "/data"
              name: data-volume
  strategy:
    type: Recreate
---
apiVersion: v1
kind: Service
metadata:
  name: nkd-portal-data-gov-cz
  namespace: nkd
  labels:
    app.kubernetes.io/name: portal-data-gov-cz
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: portal-data-gov-cz
  ports:
  - protocol: TCP
    targetPort: 80
    port: 80
