azure-kubernetes-service/base/public.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nkd-public-data-deployment
  namespace: nkd
  labels:
    app.kubernetes.io/name: public-data
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: public-data
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: public-data
    spec:
      volumes:
        - name: config
          configMap:
            name: nkd-public-data-config
        - name: public-volume
          persistentVolumeClaim:
            claimName: nkd-public-pvc
      containers:
        - name: nkd-public-data
          image: nginx:1.29.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: "/usr/share/nginx/html"
              name: public-volume
            - name: config
              mountPath: /etc/nginx/mime.types
              subPath: mime.types
---
apiVersion: v1
kind: Service
metadata:
  name: nkd-public-data
  namespace: nkd
  labels:
    app.kubernetes.io/name: public-data
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: public-data
  ports:
  - protocol: TCP
    targetPort: 80
    port: 80
