azure-kubernetes-service/base/solr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nkd-solr-deployment
  namespace: nkd
  labels:
    app.kubernetes.io/name: solr
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: solr
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: solr
    spec:
      volumes:
        - name: solr-volume
          persistentVolumeClaim:
            claimName: nkd-solr-pvc
      securityContext:
          fsGroup: 8983
          fsGroupChangePolicy: "OnRootMismatch"
      containers:
        - name: nkd-solr
          image: ghcr.io/datagov-cz/nkd-solr:main
          imagePullPolicy: Always
          ports:
            - containerPort: 8983
          volumeMounts:
            - mountPath: "/var/solr/data"
              name: solr-volume
          securityContext:
            runAsUser: 8983
            runAsGroup: 8983
            runAsNonRoot: true
            allowPrivilegeEscalation: false
          livenessProbe:
            httpGet:
              path: /solr/admin/info/system?wt=json
              port: 8983
            initialDelaySeconds: 45
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
            successThreshold: 1
  strategy:
    type: Recreate
---
apiVersion: v1
kind: Service
metadata:
  name: nkd-solr
  namespace: nkd
  labels:
    app.kubernetes.io/name: solr
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: solr
  ports:
  - protocol: TCP
    targetPort: 8983
    port: 8983
