azure-kubernetes-service/base/virtuoso-ndc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nkd-virtuoso-ndc-deployment
  namespace: nkd
  labels:
    app.kubernetes.io/name: virtuoso-ndc
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: virtuoso-ndc
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: virtuoso-ndc
    spec:
      volumes:
        - name: virtuoso-ndc-volume
          persistentVolumeClaim:
            claimName: nkd-virtuoso-ndc-pvc
      securityContext:
          fsGroup: 1001
          fsGroupChangePolicy: "OnRootMismatch"
      containers:
        - name: nkd-virtuoso
          image: ghcr.io/datagov-cz/nkd-virtuoso:develop
          imagePullPolicy: Always
          ports:
            - containerPort: 1111
            - containerPort: 8890
          volumeMounts:
            - mountPath: "/database"
              name: virtuoso-ndc-volume
          securityContext:
            runAsUser: 1001
            runAsGroup: 1001
            runAsNonRoot: true
            allowPrivilegeEscalation: false
          livenessProbe:
            httpGet:
              path: /sparql
              port: 8890
            # Virtuoso can be slow to start.
            initialDelaySeconds: 120
            periodSeconds: 20
            timeoutSeconds: 10
            # We allow for some failures.
            failureThreshold: 5
            successThreshold: 1
        - name: ssh-server
          image: ghcr.io/datagov-cz/nkd-ssh-server:develop
          imagePullPolicy: Always
          ports:
            - containerPort: 22
          volumeMounts:
            - mountPath: "/database"
              name: virtuoso-ndc-volume
  strategy:
    type: Recreate
---
apiVersion: v1
kind: Service
metadata:
  name: nkd-virtuoso-ndc
  namespace: nkd
  labels:
    app.kubernetes.io/name: virtuoso-ndc
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: virtuoso-ndc
  ports:
  - protocol: TCP
    targetPort: 1111
    port: 1111
    name: sql
  - protocol: TCP
    targetPort: 8890
    port: 8890
    name: http
  - protocol: TCP
    targetPort: 22
    port: 22
    name: ssh
